# nba_parser

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
nba_parser/: __init__.py  data.py  pbp.py  playertotals.py  teamtotals.py
test/test_unit/: test_calc_totals.py  test_pbp_class.py
